name:               MuHaskellIntro
version:            0.1.0.0

-- synopsis:
-- description:
homepage:           https://github.com/githubuser/MuHaskellIntro#readme
author:             Author name here
maintainer:         example@example.com
copyright:          2021 Author name here
category:           Web
build-type:         Simple
cabal-version:      >=1.10
extra-source-files: README.md

executable MuHaskellIntro
  hs-source-dirs:   src
  main-is:          Main.hs
  other-modules:    Schema
  ghc-options:      -Wall
  default-language: Haskell2010
  build-depends:
      base            >=4.12  && <5
    , mu-grpc-server  >=0.4.0
    , mu-protobuf     >=0.4.0
    , mu-rpc          >=0.4.0
    , mu-schema       >=0.3.1
    , text
